[package]
name = "jbig2dec"
version = "0.1.5"
authors = ["messense <messense@icloud.com>"]
description = "Rust binding to jbig2dec"
license = "GPL-3.0"
edition = "2018"
keywords = ["image", "pdf", "jbig2", "jb2"]
repository = "https://github.com/messense/jbig2dec-rs"
readme = "README.md"

[dependencies]
jbig2dec-sys = { version = "0.1", path = "jbig2dec-sys" }
image = { version = "0.23", default-features = false, features = ["png"], optional = true }
png = { version = "0.15.3", optional = true }

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }

[features]
default = ["with-image"]
with-image = ["image", "png"]

[workspace]
members = [
    ".",
    "jbig2dec-sys"
]
