[package]
name = "jbig2dec"
version = "0.2.0"
authors = ["messense <messense@icloud.com>"]
description = "Rust binding to jbig2dec"
license = "GPL-3.0"
edition = "2018"
keywords = ["image", "pdf", "jbig2", "jb2"]
repository = "https://github.com/messense/jbig2dec-rs"
readme = "README.md"

[dependencies]
jbig2dec-sys = { version = "0.1", path = "jbig2dec-sys" }
png = { version = "0.15.3", optional = true }

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }

[features]
default = ["png"]

[workspace]
members = [
    ".",
    "jbig2dec-sys"
]
