[package]
name = "nipdf-jbig2dec"
version = "0.3.1"
authors = ["messense <messense@icloud.com>", "redforks <redforks@gmail.com>"]
description = "Rust binding to jbig2dec, forked for nipdf to support embed jbig2 image"
license = "GPL-3.0"
edition = "2021"
keywords = ["image", "pdf", "jbig2", "jb2"]
repository = "https://github.com/messense/jbig2dec-rs"
readme = "README.md"

[dependencies]
jbig2dec-sys = { version = "0.19", path = "jbig2dec-sys" }
png = { version = "0.16.1", optional = true }

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }

[features]
default = ["png"]

[workspace]
members = [".", "jbig2dec-sys"]
